# battleship

./: .gdbinit  .gitignore  .project  CMakeLists.txt  README.md
src/battleship_deck/: .project  CMakeLists.txt  main.c
src/battleship_hull/: .cproject  .project  CMakeLists.txt  logo.c  logo.h  ncurses_utils.c  ncurses_utils.h  siren.c  siren.h
src/battleship_rudder/: .project  CMakeLists.txt  main.c  window.c  window.h
src/deck/: CMakeLists.txt
src/deck/src/: main.c
src/harbour/: .lldbinit  .project  CMakeLists.txt  demon.c  demon.h  main.c  server.c  server.h
src/harbour/src/: demon.c  main.c  main.h  server.c  server.h
src/hull/: CMakeLists.txt
src/hull/src/curses/: curses_utils.c  curses_utils.h
src/hull/src/log/: siren.h
src/hull/src/utils/: array_utils.c  array_utils.h  string_utils.c  string_utils.h
src/rudder/: CMakeLists.txt
src/rudder/src/: context.c  context.h  main.c  window.c  window.h
src/rudder/src/context/: main_menu.c  main_menu.h
